<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.edu.ifsul.bruno.calculoareapoligonos.Main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/var_bem_vindo"
            android:id="@+id/bemVindo"
            android:textSize="16pt"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/var_intro"
            android:id="@+id/msgIni"
            android:textAlignment="center"
            android:textSize="12pt"
            android:layout_marginTop="10pt" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputBaseMaior"
            android:inputType="numberDecimal"
            android:textSize="12pt"
            android:hint="@string/var_base_maior"
            android:layout_marginTop="10pt" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputBaseMenor"
            android:inputType="numberDecimal"
            android:textSize="12pt"
            android:hint="@string/var_base_menor"
            android:layout_marginTop="10pt" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputAltura"
            android:inputType="numberDecimal"
            android:textSize="12pt"
            android:hint="@string/var_altura"
            android:layout_marginTop="10pt" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/var_botao_submit"
            android:id="@+id/botaoCalcular"
            android:textSize="12pt"
            android:layout_marginTop="10pt"
            android:textAlignment="center"
            android:onClick="atividadeCalculoTrapezio"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/var_botao_limpar"
            android:id="@+id/button"
            android:textSize="12pt"
            android:layout_marginTop="10pt"
            android:textAlignment="center"
            android:onClick="limparCampos" />

    </LinearLayout>
</RelativeLayout>
